Added make admin,session list and private chat listing apis

--- a/Stealth777/SupportingFiles/Localization/ar.lproj/Localizable.strings
+++ b/Stealth777/SupportingFiles/Localization/ar.lproj/Localizable.strings
@@ -17,3 +17,5 @@
 "forgot_password" = "Forgot Password";
 "request" = "Request";
 "did_you_forget_pwd" = "Did you forget your password?";
+"Chats" = "الدردشات";
+"testing chat" = "اختبار الدردشة";
